# gmp-6.3.0-cmake

./: .gitignore  CMakeLists.txt  Makefile  check.txt  check_vs.txt  config.h  config.m4  config.status  do_m4.sh  gmp-impl.h  libtool  m4caller.cpp
cmake/: CMakeASM_YASMInformation.cmake  CMakeDetermineASM_YASMCompiler.cmake  CMakeTestASM_YASMCompiler.cmake
cxx/: CMakeLists.txt  Makefile
demos/: CMakeLists.txt  Makefile  pexpr-config.h  pexpr.c
demos/calc/: CMakeLists.txt  Makefile  calc.c  calclex.c
demos/expr/: CMakeLists.txt  Makefile  exprz.c
doc/: Makefile
mini-gmp/: CMakeLists.txt
mpf/: CMakeLists.txt  Makefile
mpn/: CMakeLists.txt  Makeasm.am  Makefile  mul_fft.c
mpq/: CMakeLists.txt  Makefile
mpz/: CMakeLists.txt  Makefile  neg.c  remove.c
printf/: CMakeLists.txt  Makefile
rand/: CMakeLists.txt  Makefile
scanf/: CMakeLists.txt  Makefile  doscan.c
tests/: CMakeLists.txt  Makefile  getopt.c  getopt.h  misc.c  spinner.c  tailor.h  testsverifier.cpp
tests/cxx/: CMakeLists.txt  Makefile
tests/devel/: CMakeLists.txt  Makefile  sqrtrem_1_2.c  try.c
tests/misc/: CMakeLists.txt  Makefile
tests/mpf/: CMakeLists.txt  Makefile
tests/mpn/: CMakeLists.txt  Makefile
tests/mpq/: CMakeLists.txt  Makefile
tests/mpz/: CMakeLists.txt  Makefile  reuse.c
tests/rand/: CMakeLists.txt  Makefile  findlc.c  gen.c  gmpstat.h  spect.c  stat.c  zdiv_round.c
tune/: Makefile
