set(SRC_FILES
#add.c
#add_1.c
add_err1_n.c
add_err2_n.c
add_err3_n.c
add_n_sub_n.c
bdiv_q.c
bdiv_qr.c
binvert.c
broot.c
brootinv.c
bsqrt.c
bsqrtinv.c
#cmp.c
cnd_swap.c
comb_tables.c
compute_powtab.c
dcpi1_bdiv_q.c
dcpi1_bdiv_qr.c
dcpi1_divappr_q.c
dcpi1_div_q.c
dcpi1_div_qr.c
diveby3.c
divexact.c
divis.c
divrem.c
div_q.c
div_qr_1.c
div_qr_1n_pi1.c
div_qr_2.c
div_qr_2u_pi1.c
dump.c
fib2m.c
fib2_ui.c
fib_table.c
gcd.c
gcdext.c
gcdext_1.c
gcdext_lehmer.c
gcd_1.c
gcd_22.c
gcd_subdiv_step.c
get_d.c
get_str.c
hgcd.c
hgcd2.c
hgcd2_jacobi.c
hgcd_appr.c
hgcd_jacobi.c
hgcd_matrix.c
hgcd_reduce.c
hgcd_step.c
invert.c
invertappr.c
jacbase.c
jacobi.c
jacobi_2.c
matrix22_mul.c
matrix22_mul1_inverse_vector.c
mod_1.c
mod_1_3.c
mp_bases.c
mul.c
mullo_n.c
mulmid.c
mulmid_n.c
mulmod_bknp1.c
mulmod_bnm1.c
mul_fft.c
mul_n.c
mu_bdiv_q.c
mu_bdiv_qr.c
mu_divappr_q.c
mu_div_q.c
mu_div_qr.c
#neg.c
nussbaumer_mul.c
perfpow.c
perfsqr.c
powlo.c
powm.c
pow_1.c
pre_mod_1.c
random.c
random2.c
redc_2.c
redc_n.c
remove.c
rootrem.c
sbpi1_bdiv_q.c
sbpi1_bdiv_qr.c
sbpi1_bdiv_r.c
sbpi1_divappr_q.c
sbpi1_div_q.c
sbpi1_div_qr.c
scan0.c
scan1.c
sec_add_1.c
sec_div_qr.c
sec_div_r.c
sec_invert.c
sec_mul.c
sec_pi1_div_qr.c
sec_pi1_div_r.c
sec_powm.c
sec_sqr.c
sec_sub_1.c
set_str.c
sizeinbase.c
sqr.c
sqrlo.c
sqrlo_basecase.c
sqrmod_bnm1.c
sqrtrem.c
strongfibo.c
sub.c
sub_1.c
sub_err1_n.c
sub_err2_n.c
sub_err3_n.c
tdiv_qr.c
toom22_mul.c
toom2_sqr.c
toom32_mul.c
toom33_mul.c
toom3_sqr.c
toom42_mul.c
toom42_mulmid.c
toom43_mul.c
toom44_mul.c
toom4_sqr.c
toom52_mul.c
toom53_mul.c
toom54_mul.c
toom62_mul.c
toom63_mul.c
toom6h_mul.c
toom6_sqr.c
toom8h_mul.c
toom8_sqr.c
toom_couple_handling.c
toom_eval_dgr3_pm1.c
toom_eval_dgr3_pm2.c
toom_eval_pm1.c
toom_eval_pm2.c
toom_eval_pm2exp.c
toom_eval_pm2rexp.c
toom_interpolate_12pts.c
toom_interpolate_16pts.c
toom_interpolate_5pts.c
toom_interpolate_6pts.c
toom_interpolate_7pts.c
toom_interpolate_8pts.c
trialdiv.c
zero.c
#zero_p.c
)

set(ASM_FILES
m4-add_n.asm
m4-addaddmul_1msb0.asm
m4-addlsh1_n.asm
m4-addlsh2_n.asm
m4-addlsh_n.asm
m4-addmul_1.asm
m4-addmul_2.asm
m4-and_n.asm
m4-andn_n.asm
m4-bdiv_dbm1c.asm
m4-bdiv_q_1.asm
m4-cnd_add_n.asm
m4-cnd_sub_n.asm
m4-com.asm
m4-copyd.asm
m4-copyi.asm
m4-div_qr_2n_pi1.asm
m4-dive_1.asm
m4-divrem_1.asm
m4-divrem_2.asm
m4-gcd_11.asm
m4-hamdist.asm
m4-invert_limb.asm
m4-invert_limb_table.asm
m4-ior_n.asm
m4-iorn_n.asm
m4-lshift.asm
m4-lshiftc.asm
m4-mod_1_1.asm
m4-mod_1_2.asm
m4-mod_1_4.asm
m4-mod_34lsub1.asm
m4-mode1o.asm
m4-mul_1.asm
m4-mul_2.asm
m4-mul_basecase.asm
m4-mullo_basecase.asm
m4-mulmid_basecase.asm
m4-nand_n.asm
m4-nior_n.asm
m4-popcount.asm
m4-redc_1.asm
m4-rsblsh1_n.asm
m4-rsblsh2_n.asm
m4-rsblsh_n.asm
m4-rsh1add_n.asm
m4-rsh1sub_n.asm
m4-rshift.asm
m4-sec_tabselect.asm
m4-sqr_basecase.asm
m4-sqr_diag_addlsh1.asm
m4-sub_n.asm
m4-sublsh1_n.asm
m4-submul_1.asm
m4-xnor_n.asm
m4-xor_n.asm
)

add_library(mpn-asm ${ASM_FILES})
target_compile_options(mpn-asm PRIVATE -Xvc -rnasm -pgas)
add_dependencies(mpn-asm gen_asm_files)

add_library(mpn ${SRC_FILES})
target_compile_definitions(mpn PRIVATE 
#-DOPERATION_sec_div_qr
#-DOPERATION_sec_pi1_div_qr
-DOPERATION_sec_div_r
-DOPERATION_sec_pi1_div_r
)
add_dependencies(mpn mpn-asm)
