add_library(
    mpz
    2fac_ui.c
    abs.c
    add.c
    add_ui.c
    and.c
    aorsmul.c
    aorsmul_i.c
    array_init.c
    bin_ui.c
    bin_uiui.c
    cdiv_q.c
    cdiv_qr.c
    cdiv_qr_ui.c
    cdiv_q_ui.c
    cdiv_r.c
    cdiv_r_ui.c
    cdiv_ui.c
    cfdiv_q_2exp.c
    cfdiv_r_2exp.c
    clear.c
    clears.c
    clrbit.c
    cmp.c
    cmpabs.c
    cmpabs_d.c
    cmpabs_ui.c
    cmp_d.c
    cmp_si.c
    cmp_ui.c
    com.c
    combit.c
    cong.c
    cong_2exp.c
    cong_ui.c
    divegcd.c
    divexact.c
    dive_ui.c
    divis.c
    divis_2exp.c
    divis_ui.c
    dump.c
    export.c
    fac_ui.c
    fdiv_q.c
    fdiv_qr.c
    fdiv_qr_ui.c
    fdiv_q_ui.c
    fdiv_r.c
    fdiv_r_ui.c
    fdiv_ui.c
    fib2_ui.c
    fib_ui.c
    fits_sint.c
    fits_slong.c
    fits_sshort.c
    fits_uint.c
    fits_ulong.c
    fits_ushort.c
    gcd.c
    gcdext.c
    gcd_ui.c
    getlimbn.c
    get_d.c
    get_d_2exp.c
    get_si.c
    get_str.c
    get_ui.c
    hamdist.c
    import.c
    init.c
    init2.c
    inits.c
    inp_raw.c
    inp_str.c
    invert.c
    ior.c
    iset.c
    iset_d.c
    iset_si.c
    iset_str.c
    iset_ui.c
    jacobi.c
    kronsz.c
    kronuz.c
    kronzs.c
    kronzu.c
    lcm.c
    lcm_ui.c
    limbs_finish.c
    limbs_modify.c
    limbs_read.c
    limbs_write.c
    lucmod.c
    lucnum2_ui.c
    lucnum_ui.c
    mfac_uiui.c
    millerrabin.c
    mod.c
    mul.c
    mul_2exp.c
    mul_si.c
    mul_ui.c
    neg.c
    nextprime.c
    n_pow_ui.c
    oddfac_1.c
    out_raw.c
    out_str.c
    stronglucas.c
    perfpow.c
    perfsqr.c
    popcount.c
    powm.c
    powm_sec.c
    powm_ui.c
    pow_ui.c
    pprime_p.c
    primorial_ui.c
    prodlimbs.c
    random.c
    random2.c
    realloc.c
    realloc2.c
    remove.c
    roinit_n.c
    root.c
    rootrem.c
    rrandomb.c
    scan0.c
    scan1.c
    set.c
    setbit.c
    set_d.c
    set_f.c
    set_q.c
    set_si.c
    set_str.c
    set_ui.c
    size.c
    sizeinbase.c
    sqrt.c
    sqrtrem.c
    sub.c
    sub_ui.c
    swap.c
    tdiv_q.c
    tdiv_qr.c
    tdiv_qr_ui.c
    tdiv_q_2exp.c
    tdiv_q_ui.c
    tdiv_r.c
    tdiv_r_2exp.c
    tdiv_r_ui.c
    tdiv_ui.c
    tstbit.c
    ui_pow_ui.c
    ui_sub.c
    urandomb.c
    urandomm.c
    xor.c    
)
target_link_libraries(mpz gmp)